@@ -9,6 +9,7 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -16,6 +17,14 @@ public class ComandaService {
 
     private final ComandaRepository repository;
     private final ComandaMapper mapper;
+    
+    public ComandaService(
+            ComandaRepository repository,
+            ComandaMapper mapper
+    ) {
+        this.repository = repository;
+        this.mapper = mapper;
+    }
 
     public ComandaDTO crear(ComandaDTO dto) {
         Comanda entity = mapper.toEntity(dto);
@@ -25,14 +34,13 @@ public class ComandaService {
     public ComandaDTO obtenerPorId(Integer id) {
         Comanda entity = repository.findById(id)
                 .orElseThrow(() -> new ResourceNotFoundException("Pedido no encontrado"));
-
         return mapper.toDTO(entity);
     }
 
     public List<ComandaDTO> listar() {
         return repository.findAll().stream()
                 .map(mapper::toDTO)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     public ComandaDTO actualizar(Integer id, ComandaDTO dto) {
@@ -40,8 +48,14 @@ public class ComandaService {
                 .orElseThrow(() -> new ResourceNotFoundException("Pedido no encontrado"));
 
         entity.setIdMesa(dto.getIdMesa());
-        entity.setEstado(Comanda.EstadoPedido.valueOf(dto.getEstado()));
-        entity.setPrioridad(Comanda.Prioridad.valueOf(dto.getPrioridad()));
+
+        if (dto.getEstado() != null) {
+            entity.setEstado(Comanda.EstadoPedido.valueOf(dto.getEstado()));
+        }
+
+        if (dto.getPrioridad() != null) {
+            entity.setPrioridad(Comanda.Prioridad.valueOf(dto.getPrioridad()));
+        }
 
         return mapper.toDTO(repository.save(entity));
     }
